# doc/api.yaml
@@ -203,7 +203,7 @@ paths:
       summary: Gets user photos
       description: |-
         Gets user photos.
-      operationId: getUserPhotos
+      operationId: getPhotos
       responses:
         "200": 
           description: User photos retrived.
@@ -269,7 +269,7 @@ paths:
       summary: returns user's bans
       description: |-
         Returns user's bans
-      operationId: getBans
+      operationId: getBansList
       responses:
         "200": 
           description: User bans retrived successfully.
